# obs-timer

./: .editorconfig  .gitignore  BUILD_CLOUD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  EXAMPLES.md  INSTALL.md  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_SETUP.md  README.md  STATUS.md  TESTING.md  TODO.md  auto_publish.bat  auto_publish.sh  build.bat  build.sh  build_docker.bat  ВСЁ_ГОТОВО.md  ИНСТРУКЦИЯ_СБОРКИ.md  ИТОГИ.md  КАК_ПОЛУЧИТЬ_ПЛАГИН.md  ПУСК.bat  ФИНАЛЬНЫЙ_ОТВЕТ.md
.github/workflows/: build.yml
data/locale/: en-US.ini
release/: README.md
release/data/locale/: ru-RU.ini
release/src/: timer-plugin.cpp  timer-plugin.h
src/: timer-plugin.cpp
